bk_ida/gccida/g1/expand_mult_highpart
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_mult_highpart/src/expmed.c:3237:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_mult_highpart/src/expmed.c:3251:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v17; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_mult_highpart/src/expmed.c:3257:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v23; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_mult_highpart/src/expmed.c:3261:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v27; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_mult_highpart/src/expmed.c:3265:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode wider_mode; // [rsp+28h] [rbp-40h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_mult_highpart/src/expmed.c:3278:46: error: use of undeclared identifier 'machine_mode'
wide_op1 = immed_double_const( cnst1, v11, ( machine_mode)v6); 
                                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_mult_highpart/src/expmed.c:3281:26: error: use of undeclared identifier 'machine_mode'
v15 = convert_to_mode( ( machine_mode)v6, op0, unsignedp); 
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_mult_highpart/src/expmed.c:3282:22: error: use of undeclared identifier 'machine_mode'
v16 = expand_mult( ( machine_mode)v6, v15, wide_op1, 0LL, 0); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_mult_highpart/src/expmed.c:3347:23: error: use of undeclared identifier 'machine_mode'
v26 = expand_binop( ( machine_mode)v6, v19, op0, wide_op1, 0LL, unsignedp, OPTAB_WIDEN); 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_mult_highpart/src/expmed.c:3351:17: error: invalid suffix 'xmode' on integer constant
if ( *(short *)0xmode == mode ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_mult_highpart/src/expmed.c:3358:36: error: use of undeclared identifier 'machine_mode'
v28 = expand_shift( RSHIFT_EXPR, ( machine_mode)v6, v13, v27, 0LL, 1); 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_mult_highpart/src/expmed.c:3359:31: error: use of undeclared identifier 'machine_mode'
return convert_modes( mode, ( machine_mode)v6, v28, unsignedp); 
                              ^
12 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_mult_highpart/src/obj/expmed.o] Error 1
